// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableCellFlex> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 0%;
  -ms-flex: 1 0 0%;
  flex: 1 0 0%;
  border-bottom: 1px solid #D1DBE8;
  padding: 16px 8px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 15px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-weight: unset;
  line-height: 24px;
  font-family: unset;
  color: #1C2025;
  background-color: unset;
}

<div
  className="c0"
/>
`;

exports[`<TableCellFlex> should render correctly when isHead 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 0%;
  -ms-flex: 1 0 0%;
  flex: 1 0 0%;
  border-bottom: 1px solid #D1DBE8;
  padding: 16px 8px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-weight: 600;
  font-size: 15px;
  line-height: 24px;
  font-family: unset;
  color: #5E6D7A;
  background-color: unset;
}

<div
  className="c0"
/>
`;
